<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textSize="30sp"/>
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/heading_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/heading_message"
        android:defaultValue="@string/heading_message"
        android:textAppearance="?android:textAppearanceMedium"/>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/authorize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/action_margin"
        android:layout_marginRight="@dimen/action_margin"
        android:text="@string/make_authorization_request"/>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/create_itinerary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/action_margin"
        android:layout_marginRight="@dimen/action_margin"
        android:text="@string/create_itinerary"/>
    <android.support.v7.widget.AppCompatButton
        android:id="@+id/view_itineraries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/action_margin"
        android:layout_marginRight="@dimen/action_margin"
        android:text="@string/view_itineraries"/>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/signOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/action_margin"
        android:layout_marginRight="@dimen/action_margin"
        android:text="@string/sign_out"
        android:visibility="gone"/>



</LinearLayout>
